Add utterances for comment support
I had to fork the theme to add comments. The utterances comment script is injected into the statically generated posts.

Plus I updated some of the 'generic' theme text.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ layui.use('element', function(){
 
         </div>
         <div class="layui-col-xs12 layui-col-sm8 layui-col-md8 about_right">
-            <h1>Biography</h1>
+            <h1>Peep this, homies</h1>
             <h2>    <p> This is a graphics programming and cooking blog. </p>
     <p> The most classicest of combos. </p>
     </h2>
