--- a/about/index.html
+++ b/about/index.html
@@ -166,7 +166,7 @@ tutorial as a jumpoff point.</li>
                 
                 <div style="margin-left: 10px;">
                     <blockquote class="self-elem-quote " style="background-color:#FFFFFF;margin-top: 10px;">
-                    <a href="/post/hugo-for-natives/">
+                    <a href="/post/dev/hugo-for-natives/">
                         <h3 class="">Hugo for Natives</h3>
                     </a>
                     <h3 style="margin-top:10px; margin-bottom:10px"> 
